--- a/data/themes/aj.toml
+++ b/data/themes/aj.toml
@@ -5,14 +5,14 @@ name = "default"
 light = true
 
 # Primary
-primary = "#2962ff"
-primary_light = "#768fff"
+primary = "#416ba3" # "#2962ff"
+primary_light = "#2b476c" # "#768fff"
 primary_dark = "#0039cb"
 
 # Menu
 menu_primary = "#fff"
-menu_text = "#416ba3" # "#34495e" 
-menu_text_active = "#2962ff"
+menu_text = "#34495e" 
+menu_text_active = "#416ba3" # "#2962ff"
 menu_title = "#2b2b2b"
 
 # Home sections
