--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -52,7 +52,7 @@ time_format = "3:04 PM"
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "ajpelu@gmail.com"
 phone = ""
-address = "Building 1 Room 1, Stanford University, California, 90210, USA"
+address = "Laboratorio de Ecología, IISTA-Centro Andaluz de Medio Ambiente, Universidad de Granada, Avda. del Mediterráneo s/n 18006 Granada"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
 office_hours = "" # """Monday 10:00 to 13:00<br>
@@ -64,10 +64,10 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
+  {icon = "twitter", icon_pack = "fab", name = "ajpelu", link = "https://twitter.com/ajpelu"},
+  {icon = "skype", icon_pack = "fab", name = "antoniojpelu", link = "skype:echo123?call"},
   # {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
-  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
+  # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
 
