--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ baseurl = "https://ajperezluque.com/"
 copyright = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-71709409-1"
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
