--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,14 @@
 [build]
-  command = "hugo"
   publish = "public"
-
-[build.environment]
-  HUGO_VERSION =
-  HUGO_ENABLEGITINFO = "true"
+  command = "hugo"
 
 [context.production.environment]
+  HUGO_VERSION = "0.74.30" # if older, use format: 0.53 (no trailing zero)
   HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
+
+[context.branch-deploy.environment]
+  HUGO_VERSION = "0.74.30" # if older, use format: 0.53 (no trailing zero)
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.74.30"
